--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fortune-sheet/core",
+  "name": "@evidential-fortune-sheet/core",
   "version": "1.0.2",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -7,7 +7,7 @@
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/ruilisi/fortune-sheet",
+  "repository": "https://github.com/Willco9455/fortune-sheet-evidential.git",
   "license": "MIT",
   "dependencies": {
     "@fortune-sheet/formula-parser": "^0.2.13",
