--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@fortune-sheet/react",
-  "version": "1.0.2",
+  "name": "@evidential-fortune-sheet/react",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.esm.js",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/ruilisi/fortune-sheet",
+  "repository": "https://github.com/Willco9455/fortune-sheet-evidential.git",
   "license": "MIT",
   "scripts": {
     "tsc": "tsc"
   },
   "dependencies": {
-    "@fortune-sheet/core": "^1.0.2",
+    "@evidential-fortune-sheet/core": "^1.0.1",
     "@types/regenerator-runtime": "^0.13.6",
     "immer": "^9.0.12",
     "lodash": "^4.17.21",
