--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "lib": ["es5", "dom"],
     "baseUrl": "./",
     "paths": {
-      "@fortune-sheet/core": ["packages/core/src"],
-      "@fortune-sheet/react": ["packages/react/src"]
+      "@evidential-fortune-sheet/core": ["packages/core/src"],
+      "@evidential-fortune-sheet/react": ["packages/react/src"]
     }
   },
   "include": ["packages/*/src", "stories/"],
