--- a/packages/fortune-excel/package.json
+++ b/packages/fortune-excel/package.json
@@ -3,7 +3,7 @@
   "workspaces": [
     "src/*"
   ],
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "An Excel import/export import library for FortuneSheet",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -14,9 +14,9 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@evidential-fortune-sheet/react": "^1.0.3",
     "@types/node": "^20.11.16",
     "react": "^18.2.0",
@@ -33,7 +33,7 @@
     "jszip": "^3.10.1"
   },
   "scripts": {
-    "prepare": "tsc",
+    "build": "tsc",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
