fixed npm build errors not building dist in packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "baseUrl": "./",
     "paths": {
       "@evidential-fortune-sheet/core": ["packages/core/src"],
-      "@evidential-fortune-sheet/react": ["packages/react/src"],
-      "@evidential-fortune-sheet/fortune-excel": ["packages/fortune-excel/src"]
+      "@evidential-fortune-sheet/react": ["packages/react/src"]
     }
   },
   "include": ["packages/*/src", "stories/", "packages/fortune-excel/tsconfig.json"],
